[package]
name = "ltm-cli"
version = "0.0.1"
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0"
description = "Name placeholder for the ltm project — portable understanding for AI work sessions."
homepage = "https://ltm-cli.dev"
repository = "https://github.com/dennisdevulder/ltm"
documentation = "https://github.com/dennisdevulder/ltm/blob/main/SPEC.md"
readme = "README.md"
keywords = ["ltm", "llm", "memory", "agents"]
categories = ["command-line-utilities"]

[lib]
path = "src/lib.rs"
