[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ltm-cli"
version = "0.0.1"
description = "Name placeholder for the ltm project — portable understanding for AI work sessions."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "Dennis de Vulder" }
]
keywords = ["ltm", "llm", "memory", "ai-agents"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://ltm-cli.dev"
Repository = "https://github.com/dennisdevulder/ltm"
Specification = "https://github.com/dennisdevulder/ltm/blob/main/SPEC.md"

[tool.setuptools.packages.find]
where = ["src"]
